# books_server

./: .env.example  .gitignore  ARCHITECTURE.md  README.md  docker-compose.yml  init-db.sql
.github/workflows/: tests.yml
authors-service/: .env.example  Dockerfile  pyproject.toml
authors-service/app/: config.py  dependencies.py  main.py
authors-service/app/api/: routes.py  schemas.py
authors-service/app/domain/: entities.py  services.py
authors-service/app/infrastructure/database/: connection.py  models.py  repositories.py
authors-service/app/infrastructure/kafka/: consumer.py  handlers.py  producer.py
authors-service/app/repositories/: interfaces.py
authors-service/tests/: conftest.py  test_repositories.py  test_routes.py  test_services.py  test_transactionality.py
books-service/: .dockerignore  .env.example  Dockerfile  pyproject.toml  requirements.txt
books-service/app/: config.py  dependencies.py  main.py
books-service/app/api/: routes.py  schemas.py
books-service/tests/: conftest.py  test_repositories.py  test_routes.py  test_services.py  test_transactionality.py
bruno/: bruno.json  collection.bru
bruno/Authors Service/: Assign Books.bru  Create Author.bru  Delete Author.bru  Get Author.bru  List Authors.bru  Unassign Book.bru  Update Author.bru
bruno/Books Service/: Assign Authors.bru  Create Book.bru  Delete Book.bru  Get Book.bru  List Books.bru  Unassign Author.bru  Update Book.bru
bruno/Health/: Authors Health.bru  Books Health.bru
bruno/environments/: Local.bru
frontend/: Dockerfile  package.json  pnpm-lock.yaml
(+19 files in other folders)
